Update website: enlarge name header, restructure research tabs, add HSC Y3 and Crafford et al. papers

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -5,7 +5,7 @@
 @import 'libs/breakpoints';
 @import 'libs/html-grid';
 @import url("fontawesome-all.min.css");
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,600");
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap');
 
 /*
 	Prologue by HTML5 UP
@@ -108,11 +108,11 @@
 
 	body {
 		background: #fff;
-		font-family: 'Source Sans Pro', sans-serif;
-		font-size: 19pt;
+		font-family: 'Inter', sans-serif;
+		font-size: 16pt;
 		font-weight: 300;
-		line-height: 1.75em;
-		color: #888;
+		line-height: 1.6em;
+		color: #6f6f6f;
 
 		// Stops initial animations until page loads.
 			&.is-preload {
@@ -125,11 +125,11 @@
 	}
 
 	input, textarea, select {
-		font-family: 'Source Sans Pro', sans-serif;
-		font-size: 19pt;
+		font-family: 'Inter', sans-serif;
+		font-size: 16pt;
 		font-weight: 300;
-		line-height: 1.75em;
-		color: #888;
+		line-height: 1.6em;
+		color: #6f6f6f;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -234,7 +234,7 @@
 	.container {
 		margin: 0 auto;
 		max-width: 100%;
-		width: 1400px;
+		width: 1200px;
 
 		@include breakpoint('wide') {
 			width: 1200px;
@@ -579,7 +579,7 @@
 		position: fixed;
 		text-align: right;
 		top: 0;
-		width: 375px;
+		width: _size(header);
 
 		.top {
 			@include vendor('flex-grow', '1');
@@ -619,7 +619,7 @@
 			position: relative;
 			color: #fff;
 			font-weight: 600;
-			font-size: 1em;
+			font-size: 1.4em;
 			line-height: 1em;
 		}
 
@@ -648,10 +648,10 @@
 			li {
 				padding-left: 0;
 
-				a {
-					display: block;
-					padding: 0.5em 1.5em 0.5em 1.5em;
-					color: rgba(255, 255, 255, 0.5);
+                    a {
+                    	display: block;
+                    	padding: 0.5em 2em 0.5em 2em;
+                    	color: rgba(255, 255, 255, 0.6);
 					text-decoration: none;
 					outline: 0;
 					border: 0;
@@ -667,7 +667,7 @@
 							left: 0;
 							color: #41484c;
 							text-align: center;
-							width: 1.25em;
+							width: 1.5em;
 							line-height: 1.75em;
 						}
 					}
@@ -689,7 +689,7 @@
 /* Footer */
 
 	#footer {
-		margin-left: 375px;
+		margin-left: _size(header);
 		text-align: center;
 		background-color: #dce3e2;
 		padding: 3em 0 4em 0;
@@ -719,7 +719,7 @@
 /* Main */
 
 	#main {
-		margin-left: 375px;
+		margin-left: _size(header);
 
 		> section {
 			margin: 0;
@@ -784,25 +784,25 @@
 		/* Basic */
 
 			body, input, textarea, select {
-				font-size: 17pt;
+				font-size: 15pt;
 			}
 
 		/* Header */
 
 			#header {
-				width: 300px;
+				width: _size(header);
 			}
 
 		/* Footer */
 
 			#footer {
-				margin-left: 300px;
+				margin-left: _size(header);
 			}
 
 		/* Main */
 
 			#main {
-				margin-left: 300px;
+				margin-left: _size(header);
 			}
 
 	}
@@ -834,7 +834,7 @@
 		/* Basic */
 
 			body, input, textarea, select {
-				font-size: 16pt;
+				font-size: 14pt;
 			}
 
 			.container {
@@ -921,7 +921,7 @@
 			}
 
 			body, input, textarea, select {
-				font-size: 16pt;
+				font-size: 14pt;
 			}
 
 			header {
