--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,6 +72,8 @@ input, select, textarea {
 	appearance: none;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap');
+
 /* Basic */
 
 	html {
@@ -84,11 +86,11 @@ input, select, textarea {
 
 	body {
 		background: #fff;
-		font-family: 'Source Sans Pro', sans-serif;
-		font-size: 19pt;
+		font-family: 'Inter', sans-serif;
+		font-size: 16pt;
 		font-weight: 300;
-		line-height: 1.75em;
-		color: #888;
+		line-height: 1.6em;
+		color: #6f6f6f;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -103,11 +105,11 @@ input, select, textarea {
 		}
 
 	input, textarea, select {
-		font-family: 'Source Sans Pro', sans-serif;
-		font-size: 19pt;
+		font-family: 'Inter', sans-serif;
+		font-size: 16pt;
 		font-weight: 300;
-		line-height: 1.75em;
-		color: #888;
+		line-height: 1.6em;
+		color: #6f6f6f;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -215,8 +217,8 @@ input, select, textarea {
 
 	.container {
 		margin: 0 auto;
-		max-width: 67%;
-		width: 1400px;
+		max-width: 85%;
+		width: 1200px;
 	}
 
 		@media screen and (min-width: 961px) and (max-width: 1880px) {
@@ -269,6 +271,23 @@ input, select, textarea {
   padding-left: 2rem;      /* push text inward from the left edge */
   padding-right: 2rem;     /* optional, for balance */
 }
+
+.col-8.col-12-mobile {
+  font-size: 1.1rem;   /* balanced size for About Me */
+  line-height: 1.6;     /* maintain readability */
+  text-align: left;
+}
+
+#research > .container > p {
+  font-size: 1.1rem;   /* balanced size for Research intro paragraph */
+  line-height: 1.6;
+}
+
+#research .item header {
+  font-size: 1.1rem;   /* match font size in research tabs */
+  line-height: 1.6;
+}
+
 p {
   text-align: left;
 }
@@ -1881,7 +1900,7 @@ p {
 		form input[type="password"]:focus,
 		form select:focus,
 		form textarea:focus {
-			box-shadow: 0 0 2px 1px #8ebebc;
+			box-shadow: 0 0 2px 1px #5a9f94;
 			background: #fff;
 		}
 
@@ -2080,7 +2099,7 @@ button:active,
 		position: fixed;
 		text-align: right;
 		top: 0;
-		width: 375px;
+		width: 300px;
 	}
 
 		#header .top {
@@ -2130,7 +2149,7 @@ button:active,
 			position: relative;
 			color: #fff;
 			font-weight: 600;
-			font-size: 1em;
+			font-size: 1.4em;
 			line-height: 1em;
 		}
 
@@ -2161,8 +2180,8 @@ button:active,
 
 			#nav ul li a {
 				display: block;
-				padding: 0.5em 1.5em 0.5em 1.5em;
-				color: rgba(255, 255, 255, 0.5);
+				padding: 0.5em 2em 0.5em 2em;
+				color: rgba(255, 255, 255, 0.6);
 				text-decoration: none;
 				outline: 0;
 				border: 0;
@@ -2183,7 +2202,7 @@ button:active,
 						left: 0;
 						color: #41484c;
 						text-align: center;
-						width: 1.25em;
+						width: 1.5em;
 						line-height: 1.75em;
 					}
 
@@ -2200,7 +2219,7 @@ button:active,
 /* Footer */
 
 	#footer {
-		margin-left: 375px;
+		margin-left: 300px;
 		text-align: center;
 		background-color: #dce3e2;
 		padding: 3em 0 4em 0;
@@ -2230,7 +2249,7 @@ button:active,
 /* Main */
 
 	#main {
-		margin-left: 375px;
+		margin-left: 300px;
 	}
 
 		#main > section {
